[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bounty-ledger"
version = "1.0.0"
description = "A passive bug bounty research ledger CLI tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
bounty = "bounty_ledger.cli:app"

[tool.setuptools.packages.find]
where = ["."]
